
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int io_buf ;
typedef int fd_set ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int write (int,char*,int) ;

void
shell (int socket)
{
 char io_buf[1024];
 int n;
 fd_set fds;

 while (1) {
  FD_SET (0, &fds);
  FD_SET (socket, &fds);

  select (socket + 1, &fds, ((void*)0), ((void*)0), ((void*)0));
  if (FD_ISSET (0, &fds)) {
   n = read (0, io_buf, sizeof (io_buf));
   if (n <= 0)
    return;
   write (socket, io_buf, n);
  }

  if (FD_ISSET (socket, &fds)) {
   n = read (socket, io_buf, sizeof (io_buf));
   if (n <= 0)
    return;
   write (1, io_buf, n);
  }
 }
}
